<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/home_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />

    </group>

    <group android:id="@+id/category_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu"
            android:visible="false"
            android:icon="@drawable/ic_restaurant_menu_black_24dp"
            android:title="@string/menu_menu" />
    </group>


    <group android:id="@+id/offers_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_offers"
            android:icon="@drawable/ic_local_offer_black_24dp"
            android:title="@string/offers" />
    </group>

    <group android:id="@+id/cart_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/nav_cart" />
    </group>

    <group android:id="@+id/view_orders_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_view_orders"
            android:icon="@drawable/ic_view_headline_black_24dp"
            android:title="@string/nav_orders" />
    </group>

    <group android:id="@+id/branches_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_branches"
            android:icon="@drawable/ic_store_black_24dp"
            android:title="@string/nav_branches" />
    </group>

    <group android:id="@+id/nav_update_info_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_update_info"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/update_info" />
    </group>


    <group android:id="@+id/nav_aboutUs_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_aboutUs"
            android:icon="@drawable/ic_supervisor_account_black_24dp"
            android:title="@string/AboutUs" />
    </group>

    <group android:id="@+id/nav_call_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_call"
            android:icon="@drawable/ic_call_black_24dp"
            android:title="@string/CallUs" />
    </group>

    <group android:id="@+id/nav_language_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_language"
            android:icon="@drawable/ic_language_black_24dp"
            android:title="@string/Language" />
    </group>

    <group android:id="@+id/user_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/sign_out" />
    </group>

    <item android:title="@string/add_nav_tabs">
        <menu>
            <item
                android:id="@+id/nav_news"
                android:icon="@drawable/ic_notifications_blackmain_24dp"
                android:title="@string/sunscrinNews" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_rate_review_black_24dp"
                android:title="@string/menu_rate" />
        </menu>
    </item>




</menu>
