<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp">

        <TextView
            android:id="@+id/txt_total_price_delevriy"
            android:text="TOTAL"
            android:layout_gravity="center"
            android:visibility="gone"
            android:textStyle="bold"
            android:textColor="@android:color/holo_red_light"
            android:textSize="@dimen/_14ssp"
            android:layout_marginLeft="@dimen/_3sdp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <com.jaredrummler.materialspinner.MaterialSpinner
            android:id="@+id/mySpinner"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:textSize="@dimen/_15ssp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>


    </LinearLayout>



    <LinearLayout
        android:id="@+id/google_place_frag"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <fragment
            android:id="@+id/places_autocomplete_fragment"
            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/edt_address"
            android:visibility="gone"
            android:hint="@string/Enteraddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </com.google.android.material.textfield.TextInputLayout>





    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <EditText
        android:id="@+id/txt_address_detail"
        android:visibility="visible"
        android:fontFamily="@font/brandon_medium"
        android:textSize="19sp"
        android:hint="@string/address_hint"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/edt_comment"
            android:hint="@string/YourNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </com.google.android.material.textfield.TextInputLayout>



    <TextView
        android:text="@string/DeliveryMethod"
        android:fontFamily="@font/brandon_medium"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/dialgo_hearder_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RadioGroup
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <RadioButton
        android:id="@+id/rdi_home_address"
        android:checked="true"
        android:text="@string/HomeAddress"
        android:fontFamily="@font/brandon_medium"
        android:textSize="18sp"
        android:textStyle="italic"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/rdi_other_address"
            android:text="@string/OtherAddress"
            android:fontFamily="@font/brandon_medium"
            android:textSize="18sp"
            android:textStyle="italic"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/rdi_ship_this_address"
            android:text="Ship to this address"
            android:visibility="gone"
            android:fontFamily="@font/brandon_medium"
            android:textSize="18sp"
            android:textStyle="italic"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


   </RadioGroup>


    <TextView
        android:text="@string/PaymentMethod"
        android:fontFamily="@font/brandon_medium"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/dialgo_hearder_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <RadioGroup
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rdi_cod"
            android:checked="true"
            android:text="@string/CashDelivery"
            android:fontFamily="@font/brandon_medium"
            android:textSize="18sp"
            android:textStyle="italic"
            android:textColor="@color/dialgo_text_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/rdi_braintree"
            android:text="Braintree"
            android:visibility="gone"
            android:fontFamily="@font/brandon_medium"
            android:textSize="18sp"
            android:textStyle="italic"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>



    </RadioGroup>


</LinearLayout>