<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_above="@+id/layout_button_group"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:padding="8dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:fontFamily="@font/brandon_medium"
                    android:text="@string/size"
                    android:textSize="22sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <RadioGroup
                    android:id="@+id/rdi_group_size"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


            </LinearLayout>



        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_addon"
            android:layout_width="match_parent"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true"
            android:layout_height="wrap_content">

            <LinearLayout
                android:padding="8dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:fontFamily="@font/brandon_medium"
                        android:text="@string/addon"
                        android:textSize="22sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <ImageView
                        android:id="@+id/img_add_addon"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="4dp"
                        android:layout_marginTop="4dp"
                        android:src="@drawable/ic_add_box_black_24dp"
                        android:tint="@color/colorAccent"
                        android:layout_width="30dp"
                        android:layout_height="30dp"/>


                </LinearLayout>

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chip_group_user_selected_addon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>


    <LinearLayout
        android:weightSum="2"
        android:orientation="horizontal"
        android:id="@+id/layout_button_group"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_cancel"
            android:text="@string/CANCEL"
            android:layout_marginLeft="6dp"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            android:padding="8dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_ok"
            android:text="@string/Confirmm"
            android:layout_marginLeft="6dp"
            android:padding="8dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:textColor="@android:color/white"
            android:background="@android:color/transparent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</RelativeLayout>