<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/back"

    android:layout_width="match_parent"
    android:layout_height="match_parent">




    <LinearLayout


        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <LinearLayout

            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_weight="1.9"
            android:padding="8dp"
            android:layout_height="0dp">

            <TextView

                android:gravity="center"
                android:id="@+id/category_text"
                android:textStyle="bold"
                android:fontFamily="@font/newdancingfont"
                android:textColor="@color/colorAccent"
                android:text="@string/Categoriess"
                android:textSize="@dimen/_20ssp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout

                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView

                    android:id="@+id/recycler_categories"
                    android:padding="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </LinearLayout>


        </LinearLayout>
        <LinearLayout

            android:orientation="vertical"
            android:layout_weight="1.5"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <TextView
                android:gravity="center"

                android:id="@+id/bestdeals_text"
                android:layout_marginTop="4dp"
                android:textColor="@color/colorAccent"

                android:fontFamily="@font/newdancingfont"
                android:text="@string/BestDeals"
                android:textStyle="bold"
                android:textSize="@dimen/_20ssp"


                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>



            <LinearLayout

                android:background="@color/colorAccent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.asksira.loopingviewpager.LoopingViewPager
                    android:id="@+id/viewpager"
                    android:background="@color/overlay_color"

                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    app:cardCornerRadius="8dp"

                    app:isInfinite="true"
                    app:autoScroll="true"
                    app:scrollInterval="3000"
                    android:clipToPadding="false"

                    />

            </LinearLayout>






        </LinearLayout>



        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_weight="1.9"

            android:padding="8dp"
            android:layout_height="0dp">

            <TextView
                android:gravity="center"


                android:id="@+id/mostpopular_text"

                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:fontFamily="@font/newdancingfont"
                android:text="@string/MostPopular"
                android:textSize="@dimen/_20ssp"


                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView

                android:id="@+id/recycler_popular"
                android:padding="4dp"

                android:layout_width="match_parent"
                android:layout_height="match_parent"/>




        </LinearLayout>


    </LinearLayout>









</androidx.constraintlayout.widget.ConstraintLayout>